--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    cursor: none !important;
+    /* cursor: none !important; */
 }
 
 /* Main cursor dot */
@@ -67,7 +67,6 @@
 
 html {
     scroll-behavior: smooth;
-    cursor: url('/assets/img/curser.png') auto;
 }
 
 body {
